correction alignement contenu

--- a/less/style.less
+++ b/less/style.less
@@ -18,15 +18,18 @@ nav{
 		margin: 0 auto;
 		max-width: 1152px;
 		position: relative;
+
+        li{
+             padding-top:0.4em;
+        }  
 }
 
 
 li{
 	display:flex;
-    justify-content: space-around;
     flex-direction: row;
-            margin: 0 auto;
-    padding-top:0.4em;
+    margin: 0 auto;
+    padding-top:0.1em;
 }  
 
 a{
@@ -63,8 +66,6 @@ footer{
 		flex-direction: column;
      	margin-bottom: 1.5em;
 		padding-bottom: 2em;
-		width: 115%;
-		padding-left: 0.5em;
 			
 		label{
 				display:flex;
